# Weed-analyzer-for-Farmbot

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  repository.yaml
.github/scripts/: verify_config.py
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  development.md  integration-contract.md
farmbot_vision/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  config.yaml  requirements.txt  run.sh
farmbot_vision/src/farmbot_vision/: __init__.py  __main__.py  calibration.py  calibration_store.py  curve_edit.py  curves.py  database.py  home_assistant.py  jobs.py  models.py  resolution.py  safety.py  settings.py  vision.py  web.py
farmbot_vision/tests/: conftest.py  test_calibration.py  test_calibration_store.py  test_curve_edit.py  test_farmbot_calibration.py  test_home_assistant.py  test_image_contract.py  test_jobs_migrations.py  test_performance.py  test_resolution.py  test_safety_curves.py  test_vision.py  test_vision_resolution.py  test_web.py
farmbot_vision/translations/: en.yaml
