[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "farmbot-vision"
version = "0.1.2"
description = "Resource-conscious plant canopy analysis for FarmBot and Home Assistant"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.14",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "numpy==2.2.6",
  "opencv-python-headless==4.11.0.86",
  "psutil==7.0.0",
  "pydantic==2.11.7",
  "python-multipart==0.0.20",
  "uvicorn==0.34.3",
  "websockets==15.0.1",
]

[project.optional-dependencies]
dev = ["pytest==8.4.1", "pytest-asyncio==1.0.0", "ruff==0.12.2"]

[tool.setuptools]
package-dir = {"" = "farmbot_vision/src"}

[tool.setuptools.packages.find]
where = ["farmbot_vision/src"]

[tool.pytest.ini_options]
testpaths = ["farmbot_vision/tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
ignore = ["E501", "S104"]

[tool.ruff.lint.per-file-ignores]
"farmbot_vision/tests/*" = ["S101", "S106"]
